# blitz

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/: world.ldtk
projs/blitz-common/: Cargo.toml
projs/blitz-common/src/: error.rs  lib.rs  network.rs  player.rs  projectile.rs
projs/client/: Cargo.toml  build.rs
projs/client/src/: exit.rs  main.rs  networking.rs  resources.rs
projs/client/src/networking/: mod.rs  resources.rs
projs/client/src/player/: mod.rs
projs/server/: Cargo.toml
projs/server/src/: main.rs  resources.rs
projs/server/src/collisions/: mod.rs
projs/server/src/networking/: mod.rs  resources.rs
projs/server/src/players/: mod.rs
projs/server/src/projectiles/: mod.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs  utils.rs
