[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.10.0", features = ["serialize"]}
bevy_renet = "0.0.7"
bevy_ecs_ldtk = {git ="https://github.com/Trouv/bevy_ecs_ldtk.git", branch = "chore/prepare-0.6"}
bevy-inspector-egui = "0.18.1"

serde = {version = "1", features = ["derive"]}
bincode = "1.3"
blitz-common = {path = "../blitz-common"}